2015/11/03:
Fix-fix-and-re-fix the Makefile in an attempt to allow installation under
opam/Windows. Thanks to Daniel Weil for patient explanations and testing.

2015/10/29:
MenhirLib is now installed in both binary and source forms.
"menhir --suggest-menhirLib" reports where MenhirLib is installed.
This can be used to retrieve a snapshot of MenhirLib in source form
and include it in your project (if you wish to use --table mode, yet
do not wish to have a dependency on MenhirLib).

2015/10/26:
Allow --list-errors to work on 32-bit machines (with low hard limits).
This should fix a problem whereby the 2015/10/23 release could not
bootstrap on a 32-bit machine.

2015/10/23:
New declaration "%on_error_reduce foo", where foo is a nonterminal symbol.
This modifies the automaton as follows. In every state where a production of
the form "foo -> ..." is ready to be reduced, every error action is replaced
with a reduction of this production. (If there is a conflict between several
productions that could be reduced in this manner, nothing is done.) This does
not affect the language that is accepted by the automaton, but delays the
detection of an error: more reductions take place before the error is
detected.

2015/10/23:
Fixed a bug whereby Menhir would warn about a useless %prec declaration,
even though it was useful. This would happen when the declaration was
duplicated (by inlining or by macro-expansion) and some but not all of
the copies were useful.

2015/10/23:
Added [has_default_reduction] to the incremental API.

2015/10/23:
Modified the meaning of --canonical to allow default reductions to take
place. This implies no loss of precision in terms of lookahead sets,
and should allow gaining more contextual information when a syntax
error is encountered. (It should also lead to a smaller automaton.)

2015/10/23:
A brand new set of tools to work on syntax errors.
New command --list-errors, which produces a list of input sentences which