@@ -1,3 +1,6 @@
+* Ongoing work on positions.
+  Remove the function [positions] in the incremental API? or update its doc.
+
 * Develop an alternate src/Makefile that does not require ocamlbuild?
   Could use OCamlMakefile instead, for instance.
 
