@@ -1,3 +1,8 @@
+2015/11/04:
+Incompatible change of the incremental API: instead of a unit argument, the
+entry points (which are named after the start symbol) now require an initial
+position, which typically should be [lexbuf.lex_curr_p].
+
 2015/11/03:
 Fix-fix-and-re-fix the Makefile in an attempt to allow installation under
 opam/Windows. Thanks to Daniel Weil for patient explanations and testing.
